--- a/assets/less/moz.less
+++ b/assets/less/moz.less
@@ -7,12 +7,14 @@
 
 /** @section Mozilla Header
  * Partially taken from http://mozilla.com current header CSS (in page style block)
+ * A couple modifications made to integrate with current design
  -------------------------------------------------- */
 
 #header {
 	.str-container(960px);
 	text-align: center;
 	height: 61px;
+	margin-bottom: 45px;
 }
 #header h1 {
 	margin: 0;
@@ -72,6 +74,7 @@
 	border-style: solid;
 	border-color: #98b2c9;
 	z-index: 100;
+	min-width: 61px;
 	position: relative;
 	color: #484848;
 	text-decoration: none;
