--- a/assets/less/structure.less
+++ b/assets/less/structure.less
@@ -6,9 +6,6 @@
  * Don't compile this file! It's included in main.less
  */
 
-/* Color vars */
-@lighttan: #d0c8b4;
-
 /** @section Basic structure
  -------------------------------------------------- */
 
@@ -21,11 +18,7 @@
 }
 .content {
 	.font-text;
-	
-	a {
-		color: #fff;
-	}
-	
+
 	h1,
 	h2,
 	h3 {
@@ -57,7 +50,7 @@
 	}
 	
 	h1.title {
-		color: @lighttan;
+		color: #c7ccd6;
 		.font-display-2;
 		margin-right: 16px;
 		white-space: nowrap;
@@ -91,8 +84,8 @@
 #act-1 {
 	/* Fallback for browsers that don't support multiple backgrounds */
 	background: #f6fafd url(../img/act1-crowd.png) center bottom repeat-x;
-	min-height: 579px;
-	padding-bottom: 71px;
+	min-height: 603px;
+	padding-bottom: 46px;
 }
 
 /**
@@ -126,7 +119,7 @@
 	/* Crest - the logo/paragraph/paragraph thing at the top of the page */
 	#crest {
 		.clearfix;
-		margin-bottom: 28px;
+		margin-bottom: 5px;
 		min-height: 178px;
 		padding-top: 15px;
 		position: relative;
@@ -180,7 +173,7 @@
 }
 #act-2 .title-card h2 {
 	.font-display-2;
-	color: @lighttan;
+	color: #c7ccd6;
 	font-size: 2.4em;
 }
 #act-2 .content li {
@@ -188,7 +181,7 @@
 	margin-bottom: 8px;
 }
 #act-2 .content li span {
-	color: @lighttan;
+	color: #c7ccd6;
 }
 
 #act-2 #img-merch {
@@ -316,7 +309,7 @@
 	}
 	
 	#act-2 .content {
-		color: @lighttan;
+		color: #c7ccd6;
 	}
 	#act-2 .content h1 {
 		color: #fff;
